@@ -11,6 +11,13 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-2005">Version 1.3 (2005-??-??)</a></h2>
 <ul>
+<li><code><span>PyObjCTools.AppHelper.runEventLoop()</span></code> no longer breaks on
+pure Objective-C exceptions.  Most exceptions of this variety
+are more like warnings, and there is nothing that can be done
+them anyway.</li>
+<li><code><span>PyObjCTools.AppHelper.runEventLoop()</span></code> now installs the
+interrupt handler and verbose exception logging when using pdb,
+either explicitly or by the USE_PDB environment variable.</li>
 <li>There is now a fast path for the <code><span>NSString</span></code>/<code><span>unicode</span></code>
 bridge when <code><span>Py_UNICODE_SIZE</span></code> is 2.  This is the default
 setting for Python.</li>
